# filter_lib

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: full_test_verification.yml
ext/: CMakeLists.txt
impl/: CMakeLists.txt
impl/filter_lib/: biquad.cpp  biquad.hpp  biquad_modified.cpp  biquad_modified.hpp  filter_common.cpp  filter_common.hpp  filter_includes.cpp  filter_includes.h  filter_includes.hpp  fo_apf.cpp  fo_apf.h  fo_apf.hpp  fo_hpf.cpp  fo_hpf.hpp  fo_lpf.cpp  fo_lpf.hpp  fo_shelving_high.cpp  fo_shelving_high.hpp  fo_shelving_low.cpp  fo_shelving_low.hpp  so_apf.cpp  so_apf.hpp  so_bpf.cpp  so_bpf.hpp  so_bsf.cpp  so_bsf.hpp  so_butterworth_bpf.cpp  so_butterworth_bpf.hpp  so_butterworth_bsf.cpp  so_butterworth_bsf.hpp  so_butterworth_hpf.cpp  so_butterworth_hpf.hpp  so_butterworth_lpf.cpp  so_butterworth_lpf.hpp  so_hpf.cpp  so_hpf.hpp  so_linkwitz_riley_hpf.cpp  so_linkwitz_riley_hpf.hpp  so_linkwitz_riley_lpf.cpp  so_linkwitz_riley_lpf.hpp  (+8 more)
test/: CMakeLists.txt  fo_apf_test.cpp  main.cpp  so_apf_test.cpp  so_hpf_test.cpp  test_helpers.cpp  test_helpers.hpp
test/approval_files/: test_helpers.generate_test_data.sin_f_1.approved.txt  test_helpers.generate_test_data.sin_f_50.approved.txt  test_helpers.generate_test_data.sin_f_5000.approved.txt
test/unit_integration_test/: CMakeLists.txt  fo_hpf_test.cpp  so_hpf_test.cpp  test_helpers.cpp  test_helpers.hpp
test/unit_test/: CMakeLists.txt  fo_apf_test.cpp  fo_hpf_test.cpp  fo_lpf_test.cpp  fo_shelving_high_test.cpp  fo_shelving_low_test.cpp  so_apf_test.cpp  so_bpf_test.cpp  (+13 more)
(+14 files in other folders)
